# middleman

./: .envrc  .gitignore  .jwmrc  DEVELOPMENT.md  Dockerfile  README.md  denylist.txt  entrypoint.sh  flake.nix  middleman.js  middleman.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: container.yml  publish.yml  static-analysis.yml
patterns/: acme-success.html  adidas-my-account.html  adidas-password.html  adidas-signin.html  agoda-otp.html  agoda-signup.html  amainhobbies-home.html  amainhobbies-signin.html  bbc-pre-signin.html  bbc-saved-not-login.html  bbc-signin-email.html  bestbuy-mfa-choices.html  bestbuy-signin-password.html  ebird-signin.html  gofood-order.html  gofood-otp.html  goodreads-modal.html  goodreads-overlay.html  goodreads-select-signin.html  goodreads-signin.html  goodreads-siteheader.html  nba-key-dates.html  npr-headlines.html  nytimes-best-sellers.html  thriftbooks-cart.html  thriftbooks-home.html  thriftbooks-signin.html  tokopedia-home.html  tokopedia-login.html  tokopedia-transaction.html  wayfair-email-otp.html  wayfair-login-loading.html  wayfair-login.html  wayfair-password.html  wayfair-phone-otp.html  zillow-favorites.html
specs/acme/: acme-signin.html  acme-success.html
specs/adidas/: adidas-my-account.html  adidas-orders.html  adidas-password.html  adidas-signin.html
specs/agoda/: agoda-booking-completed.html  agoda-booking.html  agoda-otp.html  agoda-profile.html  agoda-signin.html  agoda-signup.html
specs/alltrails/: alltrails-profile-dialog.html  alltrails-profile.html  alltrails-signin.html
(+63 files in other folders)
